test_data/typeerror/core-1972.py
check = condition.from_config(action)(self.hass, False)